--- a/style.css
+++ b/style.css
@@ -1,32 +1,35 @@
 .botones{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap:1rem;
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        gap:1rem;
 }
 
 .contenedor{
-    display: flex;
-    flex-direction: column;
-    margin: 10rem 30rem;
-    gap: 2rem;
+        background: #F3F3F3;
+        padding: 3rem;
+        display: flex;
+        flex-direction: column;
+        margin: 0rem 30rem;
+        gap: 2rem;
 }
 
 .num{
-    background: chartreuse;
-    height: 3rem;
-    border: none;
-    border-radius: 1rem;
+        background: chartreuse;
+        height: 3rem;
+        border: none;
+        border-radius: 1rem;
 }
 
 .num:hover{
-    box-shadow: 0px 0px 12px #aaa;
+        box-shadow: 0px 0px 12px #aaa;
 }
 
 .entrada{
-    background-color: #666;
-    color: #eee;
-    padding: 9px;
+        background-color: #666;
+        color: #eee;
+        padding: 9px;
 }
-
-
-
+h1{
+        text-align: center;
+        margin: 2rem;
+}
